--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "react": "^18",
