--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
   "rules": {
     "react/react-in-jsx-scope": "off", // react 17부턴 import 안해도돼서 기능 끔
     // 경고표시, 파일 확장자를 .ts나 .tsx 모두 허용함
-    "react/jsx-filename-extension": ["warn", { "extensions": [".ts", ".tsx", ".js", ".jsx"] }],
+    "react/jsx-filename-extension": ["warn", { "extensions": [".ts", ".tsx"] }],
     "no-useless-catch": "off", // 불필요한 catch 못쓰게 하는 기능 끔
     "jsx-a11y/label-has-associated-control": [
       2,
@@ -34,6 +34,6 @@
       }
     ],
     "import/prefer-default-export": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/tsx-props-no-spreading": "off"
   }
 }
