--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "eslint --fix --ext .ts,.tsx,.js,.jsx ./src",
     "prepare": "husky install"
   },
   "dependencies": {
