--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,12 @@
       }
     ],
     "import/prefer-default-export": "off",
-    "react/tsx-props-no-spreading": "off"
+    "react/tsx-props-no-spreading": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
