--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
     "next": "^14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "recoil": "^0.7.7",
     "uuid": "^9.0.1"
@@ -31,7 +31,7 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
