--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18",
+    "react-paginate": "^8.2.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
