feat: 마이페이지 레이아웃 생성

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,8 @@
     ],
     "import/prefer-default-export": "off",
     "react/tsx-props-no-spreading": "off",
+    "react/require-default-props": "off",
+    "react/no-array-index-key": "off",
     "prettier/prettier": [
       "error",
       {
