--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-slick": "^0.30.2",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.4",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18.3.3",
+    "@types/node": "20.14.2",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
@@ -43,7 +46,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.4.5"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
