feat: 마이페이지 업적 조회 기능

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
     "react/require-default-props": "off",
     "react/no-array-index-key": "off",
     "react/jsx-props-no-spreading": "off",
+    "@typescript-eslint/no-shadow": "off",
     "prettier/prettier": [
       "error",
       {
