--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-devtools": "^5.40.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "framer-motion": "^11.2.6",
     "moment": "^2.30.1",
     "next": "14.2.3",
