--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,7 @@
     "jsx-a11y/label-has-associated-control": [
       2,
       {
-        "some": ["nesting", "id"]
+        "labelAttributes": ["htmlFor"]
       }
     ],
     "import/prefer-default-export": "off",
